# word2vec

./: README.md  config.yaml  pyproject.toml
src/: main.py  negative_sampler.py  streaming_skip_gram_dataset.py  subsampler.py  text_iterator.py  vocab_builder.py  word2vec_model.py
